updated code to filter restrictions