@@ -4,11 +4,13 @@ import com.example.resy.data.DietaryRestriction;
 import com.example.resy.data.Restaurant;
 import com.example.resy.data.Table;
 import com.example.resy.data.request.SearchRequest;
+import jodd.util.StringUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
+import org.springframework.util.StringUtils;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -27,18 +29,10 @@ public class RestaurantDaoImpl implements RestaurantDao{
 
         //We could expand functionality later to order restaurants by popularity
         // or some form of popularity and rating so the better ones show up first
-        String restaurantQuery = "SELECT r.id as id, r.name as name, t.id as tableId, t.capacity AS tableCapacity";
-        if(!CollectionUtils.isEmpty(request.getDietaryRestrictions())){
-            restaurantQuery += " , GROUP_CONCAT(DISTINCT re.endorsement) AS endorsements ";
-        }
+        String restaurantQuery = "SELECT r.id as id, r.name as name, t.id as tableId, t.capacity AS tableCapacity , GROUP_CONCAT(DISTINCT re.endorsement) AS endorsements ";
         restaurantQuery += " FROM restaurant r ";
-        if(!CollectionUtils.isEmpty(request.getDietaryRestrictions())){
-            restaurantQuery += " JOIN restaurant_endorsement re ON r.id = re.restaurant_id ";
-        }
-        restaurantQuery += " JOIN restaurant_table t ON r.id = t.restaurant_id ";
-        if(!CollectionUtils.isEmpty(request.getDietaryRestrictions())){
-            restaurantQuery += " WHERE re.endorsement IN (:restrictions) ";
-        }
+        restaurantQuery += " LEFT JOIN restaurant_endorsement re ON r.id = re.restaurant_id ";
+        restaurantQuery += " JOIN restaurant_table t ON r.id = t.restaurant_id WHERE 1 = 1";
         restaurantQuery +=     "  AND t.capacity >= :minimumGuests " +
                 "  AND t.id NOT IN ( " +
                 "      SELECT reservation.table_id " +
@@ -55,17 +49,6 @@ public class RestaurantDaoImpl implements RestaurantDao{
         calendar.setTime(request.getReservationTime());
         calendar.add(Calendar.HOUR_OF_DAY, 2);
         Date endTime = calendar.getTime();
-
-        if (!CollectionUtils.isEmpty(request.getDietaryRestrictions())) {
-            // Convert the list of DietaryRestriction enums to a list of strings
-            List<String> restrictionsList = request.getDietaryRestrictions().stream()
-                    .map(DietaryRestriction::name)  // Assuming name() gives you the desired string representation
-                    .collect(Collectors.toList());
-
-            // Add the list to the parameters
-            params.addValue("restrictions", restrictionsList);
-        }
-
         params.addValue("minimumGuests", request.getMinimumGuests());
         params.addValue("startTime", request.getReservationTime());
         params.addValue("endTime", endTime);
@@ -82,15 +65,13 @@ public class RestaurantDaoImpl implements RestaurantDao{
                 Restaurant restaurant = new Restaurant();
                 restaurant.setId(((Number) row.get("id")).longValue());
                 restaurant.setName((String) row.get("name"));
-                if(!CollectionUtils.isEmpty(request.getDietaryRestrictions())){
-                    String endorsementString = (String) row.get("endorsements");
-                    List<DietaryRestriction> endorsementList = endorsementString != null ?
-                            Arrays.stream(endorsementString.split(","))
-                                    .map(DietaryRestriction::valueOf)
-                                    .collect(Collectors.toList())
-                            : new ArrayList<>();
+                String endorsementString = (String) row.get("endorsements");
+                Set<DietaryRestriction> endorsementList = endorsementString != null ?
+                        Arrays.stream(endorsementString.split(","))
+                                .map(DietaryRestriction::valueOf)
+                                .collect(Collectors.toSet())
+                        : new HashSet<>();
                     restaurant.setEndorsements(endorsementList);
-                }
                 List<Table> tables = new ArrayList<>();
                 Table table = new Table();
                 table.setRestaurant_id(restaurantId);
@@ -107,6 +88,19 @@ public class RestaurantDaoImpl implements RestaurantDao{
                 restaurantMap.get(restaurantId).getTableList().add(table);
             }
         }
-        return restaurantMap.values().stream().toList();
+        if(CollectionUtils.isEmpty(restaurantMap.values())){
+            return new ArrayList<>();
+        }
+        List<Restaurant> filteredRestaurants = restaurantMap.values().stream()
+                .filter(restaurant -> {
+                    if(CollectionUtils.isEmpty(request.getDietaryRestrictions())){
+                        return true;
+                    }else{
+                        return restaurant.getEndorsements().containsAll(request.getDietaryRestrictions());
+                    }
+                })
+                .collect(Collectors.toList());
+        return filteredRestaurants;
+
     }
 }
